--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -5,18 +5,19 @@ metadata:
   annotations:
     pipelinesascode.tekton.dev/on-event: "[pull_request]"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
-spec:
-  params:
-    - name: repo-url
-      value: "{{repo_url}}"
-    - name: revision
-      value: "{{revision}}"
-    - name: image-repo
-      value: "quay.io/cloudbuddy7715/hello-go-app"
-    - name: app-namespace
-      value: "pwr-mntrng-demo"
-    - name: prometheus-url
-      value: "https://prometheus-k8s-openshift-monitoring.apps.rosa.xod2t-qhhzp-dci.dchb.p3.openshiftapps.com/api"
+    pipelinesascode.tekton.dev/task: "[git-clone, buildah, openshift-client]"
+  spec:
+    params:
+      - name: repo-url
+        value: "{{repo_url}}"
+      - name: revision
+        value: "{{revision}}"
+      - name: image-repo
+        value: "quay.io/cloudbuddy7715/hello-go-app"
+      - name: app-namespace
+        value: "pwr-mntrng-demo"
+      - name: prometheus-url
+        value: "https://prometheus-k8s-openshift-monitoring.apps.rosa.xod2t-qhhzp-dci.dchb.p3.openshiftapps.com/api"
   pipelineSpec:
     params:
       - name: repo-url
