--- a/hello-go-app/Dockerfile
+++ b/hello-go-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.21-alpine AS builder
+FROM docker.io/library/golang:1.21-alpine AS builder
 # Dummy changes
 WORKDIR /app
 COPY go.mod ./
@@ -6,7 +6,7 @@ COPY . .
 RUN go mod download
 RUN CGO_ENABLED=0 go build -o hello-app cmd/main.go
 
-FROM alpine:latest
+FROM docker.io/library/alpine:latest
 RUN adduser -D appuser
 WORKDIR /app
 COPY --from=builder /app/hello-app .
